--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -37,7 +37,7 @@
   text-align: center
   height: logo-size
   position: absolute
-  top: 50%
+  top: 70%
   left: 0
   margin-top: logo-size * -0.5
 
@@ -68,7 +68,7 @@ $logo-text
 
 $nav-link
   float: left
-  color: #fff
+  color: #000
   opacity: 0.6
   text-decoration: none
   text-shadow: 0 1px rgba(0, 0, 0, 0.2)
